--- a/wp-content/themes/Ahox/style.css
+++ b/wp-content/themes/Ahox/style.css
@@ -1166,6 +1166,7 @@ blockquote p {
 @media (min-width:768px) and (max-width:979px) {
 }
 @media (max-width:979px) {
+	.logo-inner{display: none;}
 .menu-inner{position:relative;margin:0;}
 .social-icon ul{display:inline-block;}
 
