--- a/wp-content/themes/Ahox/style.css
+++ b/wp-content/themes/Ahox/style.css
@@ -1161,7 +1161,8 @@ blockquote p {
 }
 .menu-btn{width:30px;height:30px;display:none;}
 /*-----------------------------media queries-----------------------------------*/
-@media (min-width:980px) and (max-width:1199px) {
+/* and (max-width:1199px) */
+@media (min-width:980px) {
 		.logo-inner{display: none;}
 }
 @media (min-width:768px) and (max-width:979px) {
