--- a/wp-content/themes/Ahox/style.css
+++ b/wp-content/themes/Ahox/style.css
@@ -1165,6 +1165,9 @@ blockquote p {
 @media (min-width:980px) {
 		.logo-inner{display: none;}
 }
+@media (max-width:980px) {
+		.logo_dt{display: none;}
+}
 @media (min-width:768px) and (max-width:979px) {
 }
 @media (max-width:979px) {
