--- a/wp-content/themes/Ahox/style.css
+++ b/wp-content/themes/Ahox/style.css
@@ -1162,12 +1162,7 @@ blockquote p {
 .menu-btn{width:30px;height:30px;display:none;}
 /*-----------------------------media queries-----------------------------------*/
 /* and (max-width:1199px) */
-@media (min-width:980px) {
-		.logo-inner{display: none;}
-}
-@media (max-width:980px) {
-		.logo_dt{display: none;}
-}
+
 @media (min-width:768px) and (max-width:979px) {
 }
 @media (max-width:979px) {
@@ -1250,6 +1245,21 @@ code{
 	border:none !important; 
 
 }
+
+/*---------- Style to control the beach house logo  ----------*/
+@media (min-width:980px) {
+		.logo-inner{display: none;}
+}
+@media (max-width:980px) {
+		.logo_dt{display: none;}
+}
+.logo_dt{
+	
+    float: left;
+    padding: 15px;
+}
+
+
 
 #widget{
 	border:none !important; 
